# spotify-insights

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALYTICS_PLATFORM_README.md  CLEANUP_SUMMARY.md  CODEBASE_CLEANUP_SUMMARY.md  GIT_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  MUSIC_DISCOVERY_README.md  NEW_FEATURES_SUMMARY.md  PRE_COMMIT_GUIDE.md  PRE_COMMIT_SETUP_SUMMARY.md  PRIORITY_1_IMPLEMENTATION_SUMMARY.md  PRIORITY_2_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  QUICK_START_PRE_COMMIT.md  README.md  REBRAND_SUMMARY.md  SECURITY_SUMMARY.md  TESTING_SUMMARY.md  advanced_streaming_analytics.py  audora_demo.py  complete_platform_demo.py  demo_statistical_analysis.py  demo_trending_analysis.py  env_data  git-helpers.ps1  main.py  music_discovery_app.py  music_explorer.py  pyproject.toml  quick-push.ps1  rename-directory.ps1  requirements.txt  setup-pre-commit.ps1  setup.py  spotify_trending_integration.py  test_project.py  test_statistical_analysis.py  validate_security.py  (+1 more)
.github/workflows/: pre-commit.yml
.serena/: project.yml
analytics/: __init__.py  advanced_analytics.py  deep_analysis.py  enhanced_viral_prediction.py  mood_playlist_generator.py  simple_surprise.py  statistical_analysis.py  streaming_analytics.py  temporal_analysis.py
config/: api_config.template  notification_config.template
core/: __init__.py  advanced_fetch.py  auth.py  caching.py  config.py  data_store.py  deep_main.py  dependency_injection.py  discovery_app.py  exceptions.py  fetch.py  lastfm_main.py  logging_config.py  main.py  main_app.py  multi_source_main.py  notification_service.py  resilience.py  type_definitions.py  utils.py
docs/: ANALYTICS_PLATFORM_README.md  IMPLEMENTATION_SUMMARY.md  LINTING_FIXES_SUMMARY.md  MUSIC_DISCOVERY_README.md  QUICK_START.md  SECURITY_SUMMARY.md
integrations/: __init__.py  api_config.py  audiodb_integration.py  extended_platforms.py  lastfm_integration.py  musicbrainz_integration.py  social_discovery_engine.py  spotify_charts_integration.py  spotify_trending.py  trending_schema.py
scripts/: __init__.py  complete_platform_demo.py  demo_caching.py  demo_multi_source.py  demo_new_features.py  demo_statistical_analysis.py  demo_trending_analysis.py  fix_linting_issues.py  setup.py  simple_multi_source_demo.py  validate_security.py
src/: __init__.py  advanced_viz.py  audiodb_integration.py  audiodb_test.py  auth.py  config.py  data_store.py  lastfm_integration.py  lastfm_main.py  lastfm_viz.py  main.py  multi_source_main.py  musicbrainz_integration.py  musicbrainz_test.py  notification_service.py  spotify_charts_integration.py  spotify_charts_test.py  statistical_analysis.py  surprise_viz.py  trending_schema.py  trending_viz.py
templates/: daily_summary.template  viral_prediction.template
tests/: audiodb_test.py  musicbrainz_test.py  spotify_charts_test.py  test_basic_statistical.py  test_statistical_analysis.py
visualization/: __init__.py  advanced_viz.py  deep_viz.py  lastfm_viz.py  multi_source_viz.py  statistical_viz.py  surprise_viz.py  trending_viz.py  visualize.py
